# ModelFusion

./: .env.example  .gitignore  .mcp.json  COMMAND_LINE_VERIFICATION.md  Cargo.toml  FIRST_RUN_IMPLEMENTATION.md  HUGGINGFACE_TOKEN_SETUP.md  MODULARIZATION_SUMMARY.md  PE_INTEGRATION_SUMMARY.md  QUICK_START_WEB.md  README.md  README_BACKUP_SYSTEM.md  README_MODULAR.md  README_PE_ANALYSIS_WITH_AI.md  README_PE_HEADER_EXTRACTOR.md  README_POPULATION_IMPROVEMENTS.md  README_UPDATE_IMPROVEMENTS.md  README_WEB_INTERFACE.md  a.bat  clean_and_update.bat  extract_all_pe_headers.bat  extract_all_pe_headers.ps1  requirements.txt  requirements_evaluation.txt  run_update_safe.bat  set_hf_token.bat  set_hf_token.ps1  simple_test_all_flags.bat  start_web_server.bat  start_web_ui.bat  temp_output.txt  test_all_flags.bat  test_file.txt
.agents/: AGENTS.md
IDE/: README.md  aether-signing-cert.pfx  build_msi.ps1  generate_wix.js  hugos-signing-cert.pfx  run_aether.ps1  run_hugos.ps1  setup_aether.ps1
IDE/launcher/: Cargo.toml
canned_benchmark/: draco_api_cache.json  draco_api_cache.json.bak  draco_benchmark_report.md  draco_benchmark_results.json  draco_evaluation_colab.ipynb  draco_evaluation_colab_drive_json_strict_fresh_no_fallback.ipynb  draco_evaluator.py  draco_fallback_dataset.json
config/: demo_huggingface_models.csv  dynamic_models.json  settings.json  task_models.json  test_categories.csv
crates/analysis/: Cargo.toml  README.md
crates/analysis/src/: lib.rs  malware_detector.rs  pe_extractor.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  orchestrator.rs  providers.rs  task_handler.rs  task_processor.rs
crates/core/src/fusion_engine/: fusion.rs  judge.rs  mod.rs  models.rs  schema.rs
crates/model_selection/: Cargo.toml
crates/model_selection/src/: lib.rs  memory.rs
crates/monitoring/: Cargo.toml  README.md
crates/security/: Cargo.toml  README.md
crates/task_detection/: Cargo.toml  README.md
crates/utils/: Cargo.toml
docs/: AETHER_IDE_MANUAL.md  BACKEND_INTEGRATION.md  CHANGELOG.md  CLI_REFERENCE.md  HUGOS_IDE_MANUAL.md
reports/: code_review_report.json
src/hforchestra/: ML_FLAGS_SUMMARY.md  ML_HELP_INTEGRATION.md  ML_MODEL_SELECTION_README.md  SINQ_HELP_INTEGRATION.md  check_update_status.py  cli.py  integrate_ml_selection.py  main.py  requirements_ml.txt  test_ml_help.py
src/hforchestra.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/scripts/: HuggingFace_orhcestrator.py  __init__.py  add_malware_models.py  cache_ov_hub.py  check_attrs.py  check_db.py  check_db_structure.py  check_malware_models.py  check_security_in_db.py  complete_pe_header_extractor.py  comprehensive_pe_extractor.py  debug_test.py  debug_test_script.py  demo_test.py  enhanced_dynamic_generator.py  enhanced_hf_model_discovery.py  enhanced_pe_analyzer.py  enhanced_update_system.py  find_best_malware_models.py  find_real_malware_models.py  fix_jupyter_kernel.py  fixed_populate_models.py  focused_pe_extractor.py  generate_task_models.py  (+40 more)
tests/: README.md  __init__.py  quick_test.py  requirements.txt  test_command_line_options.py  test_data_analyst_report.py  test_result_schema.py  test_runner.py  test_simple.py  test_workflow_dsl.py
(+100 files in other folders)
