[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/core",
    "crates/db",
    "crates/task_detection",
    "crates/model_selection",
    "crates/analysis",
    "crates/security",
    "crates/monitoring",
    "crates/utils",
]

[workspace.dependencies]
tokio         = { version = "1", features = ["full"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
anyhow        = "1"
thiserror     = "1"
reqwest       = { version = "0.12", features = ["json", "blocking"] }
rusqlite      = { version = "0.31", features = ["bundled"] }
chrono        = { version = "0.4", features = ["serde"] }
regex         = "1"
log           = "0.4"
env_logger    = "0.11"
dotenv        = "0.15"
clap          = { version = "4", features = ["derive"] }
colored       = "2"
walkdir       = "2"
sha2          = "0.10"
md-5          = "0.10"
sha1          = "0.10"
hex           = "0.4"
indicatif     = "0.17"
async-trait   = "0.1"
futures       = "0.3"
sysinfo       = "0.30"
