[package]
name = "analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
log        = { workspace = true }
sha2       = { workspace = true }
md-5       = { workspace = true }
sha1       = { workspace = true }
chrono     = { workspace = true }
hex        = { workspace = true }
goblin     = "0.8"
