[package]
name = "modelfusion_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow          = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
reqwest         = { workspace = true }
tokio           = { workspace = true }
log             = { workspace = true }
chrono          = { workspace = true }
db              = { path = "../db" }
task_detection   = { path = "../task_detection" }
model_selection  = { path = "../model_selection" }
analysis        = { path = "../analysis" }
security        = { path = "../security" }
monitoring      = { path = "../monitoring" }
utils           = { path = "../utils" }
async-trait     = { workspace = true }
